--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,43 +7,43 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="80dp"
-            android:text="邮箱"
-            android:textSize="50dp"
-            android:textAlignment="center"/>
+<!--    <LinearLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal">-->
+<!--        <TextView-->
+<!--            android:layout_width="200dp"-->
+<!--            android:layout_height="80dp"-->
+<!--            android:text="邮箱"-->
+<!--            android:textSize="50dp"-->
+<!--            android:textAlignment="center"/>-->
 
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="500dp"
-            android:layout_height="80dp"
-            android:hint="请输入邮箱"
-            android:textSize="50dp"/>
-    </LinearLayout>
+<!--        <EditText-->
+<!--            android:id="@+id/email"-->
+<!--            android:layout_width="500dp"-->
+<!--            android:layout_height="80dp"-->
+<!--            android:hint="请输入邮箱"-->
+<!--            android:textSize="50dp"/>-->
+<!--    </LinearLayout>-->
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="80dp"
-            android:text="密码"
-            android:textSize="50dp"
-            android:textAlignment="center"/>
+<!--    <LinearLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal">-->
+<!--        <TextView-->
+<!--            android:layout_width="200dp"-->
+<!--            android:layout_height="80dp"-->
+<!--            android:text="密码"-->
+<!--            android:textSize="50dp"-->
+<!--            android:textAlignment="center"/>-->
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="500dp"
-            android:layout_height="80dp"
-            android:hint="请输入密码"
-            android:textSize="50dp"/>
-    </LinearLayout>
+<!--        <EditText-->
+<!--            android:id="@+id/password"-->
+<!--            android:layout_width="500dp"-->
+<!--            android:layout_height="80dp"-->
+<!--            android:hint="请输入密码"-->
+<!--            android:textSize="50dp"/>-->
+<!--    </LinearLayout>-->
 
     <Button
         android:id="@+id/login"
@@ -54,6 +54,11 @@
         android:onClick="onClick"
         android:layout_gravity="center"
         tools:ignore="OnClick" />
+
+    <TextView
+        android:id="@+id/tw_tw"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
