--- a/app/src/main/res/layout/activity_actor.xml
+++ b/app/src/main/res/layout/activity_actor.xml
@@ -18,11 +18,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="match_parent"
             android:id="@+id/imageview_actor_title"/>
 
